[package]
name = "grit"
version = "0.4.0"
authors = ["Todd Bush"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "^1.1"
clap = "3.2.25"
serde = "1.0.219"
serde_derive = "1.0.219"
git2 = "^0.13"
log = "^0.4"
simple_logger = "^1.16"
prettytable-rs = "^0.8"
indicatif = "^0.15"
chrono = "^0.4"
csv="^1.3"
glob="^0.3"
tokio = { version = "^0.2", features = ["macros", "rt-threaded"] }
futures = "^0.3"
charts = "^0.3"
anyhow = "^1.0"

[dev-dependencies]
tempfile = "3.19.1"
