[package]
name = "grit"
version = "0.4.0"
authors = ["Todd Bush"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "^1.1"
clap = { version = "4.5.39", features = ["derive"] }
serde = "1.0.219"
serde_derive = "1.0.219"
git2 = "^0.20"
log = "^0.4"
simple_logger = "^5.0"
prettytable-rs = "^0.10"
indicatif = "^0.17"
chrono = "^0.4"
csv = "^1.3"
glob = "^0.3"
tokio = { version = "^1.45", features = ["rt", "macros"] }
futures = "^0.3"
charts-rs = "^0.3.22"
anyhow = "^1.0"

[dev-dependencies]
tempfile = "3.20.0"
